fix: change flow upload video for lesson
